--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <meta name="description" content=""/>
-<title>Name</title>   
+<title>AKANNI.CO</title>   
 
 <!-- Mobile Specifics -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +49,7 @@
     	<div class="row">
         	<div class="span2">
             	<div id="logo">
-        			<a href="index.html" title="NAME">NAME</a>
+        			<a href="index.html" title="NAME">AKANNI.CO</a>
         		</div>
             </div>
             <div class="span10">
@@ -70,7 +70,7 @@
 	<div class="container">
         <div class="row">
             <div class="span12">
-                <h3 class="center">Any intelligent fool can make things bigger, more complex, and more violent. It takes a touch of genius and a lot of courage to move in the opposite direction.</h3>
+                <h3 class="center">We create digital solutions for neurodivergent people, creatives, and purpose-driven teams.</h3>
             </div> 
         </div>
     </div>
@@ -111,7 +111,7 @@
             </div>
              <div class="span8 widget">
             	<div class="twitter-widget">
-                		<h7><a href="#" target="_blank">facebook</a> &nbsp; • &nbsp; <a href="#" target="_blank">instagram</a> &nbsp; • &nbsp; <a href="#" target="_blank">linkedin</a> &nbsp; • &nbsp; <a href="#" target="_blank">github</a>     
+                		<h7><a href="https://instagram.com/akanni.co" target="_blank">instagram</a> &nbsp; • &nbsp; <a href="https://twitter.com/akanni_co" target="_blank">twitter</a> &nbsp; • &nbsp; <a href="#" target="_blank">linkedin</a> &nbsp; • &nbsp; <a href="#" target="_blank">github</a>     
                 </div>	
             </div>
         </div>
