--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<div class="container">
         <div class="row">
             <div class="span12">
-                <h3 class="center">We create digital solutions for neurodivergent people, creatives, and purpose-driven teams.</h3>
+                <h3 class="center">We create digital solutions for solopreneurs, creatives, neurodivergent people, small businesses, and purpose-driven teams.</h3>
             </div> 
         </div>
     </div>
