Revise about.html for branding and content updates
Updated links, headings, and content for clarity and branding.

--- a/about.html
+++ b/about.html
@@ -49,14 +49,14 @@
     	<div class="row">
         	<div class="span2">
             	<div id="logo">
-        			<a href="index.html" title="NAME">NAME</a>
+        			<a href="index.html" title="AKANNI.CO">AKANNI.CO</a>
         		</div>
             </div>
             <div class="span10">
         		<nav id="menu">
                     <ul id="menu-nav">
-                        <li><a href="about.html">about</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
         	</div>
@@ -83,7 +83,7 @@
 	<div class="container">
     <div class="row">
         <div class="span12">   
-          <h3 class="center">Write your description here.</h3>
+          <h3 class="center">Making tech tailor-fit to your needs.</h3>
         </div> 
       </div>
     </div>
@@ -100,16 +100,34 @@
     </div>
     <div class="span4">
       <div class="team-name">
-        Example<br/>
-        Example<br/>
-        Example
+        Landing page setup<br/>
+        Shopify/Medusa storefront + backend setup<br/>
+        Website setup
       </div>
     </div>
     <div class="span4">           
       <div class="team-name">
-        Example<br/>
-        Example<br/>
-        Example
+        Business process analysis + automation<br/>
+        Workflow implementation + digital adoption based on business's processes<br/>
+        Portal creation or internal software creation
+      </div>
+    </div>
+  </div>
+  <div class="span4">           
+      <div class="team-name">
+        Knowledge base setup<br/>
+        Instructional material creation (ex. onboarding)<br/>
+        Course creation (Articulate Storyline 360, Adobe Captivate, Thinkific, etc) <br/>
+		Instructional design consultation from businesses to educational content to self-learning
+      </div>
+    </div>
+  </div>
+  <div class="span4">           
+      <div class="team-name">
+        Promotional graphics for businesses<br/>
+        Content creation<br/>
+        Copywriting<br/>
+		Social media management
       </div>
     </div>
   </div>
@@ -131,19 +149,19 @@
     <div class="span4">
       <div class="team-name">
         <br/>
-        <p>Experience<br/>
-        <h7>Where</h7></p>
-        <p>Experience<br/>
-        <h7>Where</h7></p>
+        <p>Site setup<br/>
+        <h7>ANNIKLO.PH</h7></p>
+        <p>Backend setup<br/>
+        <h7>SPESH.LT Bakeshop</h7></p>
       </div>
     </div>
     <div class="span4">
       <div class="team-name">
         <br/>
-        <p>Experience<br/>
-        <h7>Where</h7></p>
-        <p>Experience<br/>
-        <h7>Where</h7></p>
+        <p>Logo creation<br/>
+        <h7>Bequest Jewelry</h7></p>
+        <p>Promo graphics<br/>
+        <h7>Khepri Digital</h7></p>
       </div>
     </div>
   </div>
@@ -160,7 +178,7 @@
     	<div class="row">
          	<div class="span4 widget">
             	<div class="about-widget">
-                    <h7>email@email.com</h7>
+                    <h7>HELLO@AKANNI.CO</h7>
                 </div>
             </div>
              <div class="span8 widget">
