--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <meta name="description" content=""/>
-<title>Contacts - Name</title>   
+<title>Contact AKANNI.CO</title>   
 
 <!-- Mobile Specifics -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,14 +49,14 @@
     	<div class="row">
         	<div class="span2">
             	<div id="logo">
-        			<a href="index.html" title="NAME">NAME</a>
+        			<a href="index.html" title="AKANNI.CO">AKANNI.CO</a>
         		</div>
             </div>
             <div class="span10">
         		<nav id="menu">
                     <ul id="menu-nav">
-                        <li><a href="about.html">about</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
         	</div>
@@ -92,12 +92,12 @@
 <section id="single-team" class="container">
     <div class="row">
         <div class="span6">
-            <h3>+39 393 0000000</h3>
-            <h6>call me</h6>
+            <h3>CAL.COM/AKANNI.CO</h3>
+            <h6>Schedule a call</h6>
         </div>
         <div class="span6">
-            <h3>email@email.com</h3>
-            <h6>write to me</h6>
+            <h3>HELLO@AKANNI.CO</h3>
+            <h6>Email me</h6>
       
             <br/>
             <br/>
@@ -112,7 +112,7 @@
     	<div class="row">
          	<div class="span4 widget">
             	<div class="about-widget">
-                    <h7>email@email.com</h7>
+                    <h7>HELLO@AKANNI.CO</h7>
                 </div>
             </div>
              <div class="span8 widget">
