Update links and email in index.html

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     	<div class="row">
         	<div class="span2">
             	<div id="logo">
-        			<a href="index.html" title="NAME">AKANNI.CO</a>
+        			<a href="index.html" title="AKANNI.CO">AKANNI.CO</a>
         		</div>
             </div>
             <div class="span10">
         		<nav id="menu">
                     <ul id="menu-nav">
-                        <li><a href="about.html">about</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
         	</div>
@@ -106,7 +106,7 @@
     	<div class="row">
          	<div class="span4 widget">
             	<div class="about-widget">
-                    <h7>email@email.com</h7>
+                    <h7>HELLO@AKANNI.CO</h7>
                 </div>
             </div>
              <div class="span8 widget">
