--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
             <div class="span10">
         		<nav id="menu">
                     <ul id="menu-nav">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="About.html">About</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
                     </ul>
                 </nav>
         	</div>
