--- a/contact.html
+++ b/contact.html
@@ -93,11 +93,11 @@
     <div class="row">
         <div class="span6">
             <h3>CAL.COM/AKANNI.CO</h3>
-            <h6>Schedule a call</h6>
+            <h6><a href="https://cal.com/akanni.co" target="_blank">Schedule a call</a></h6>
         </div>
         <div class="span6">
             <h3>HELLO@AKANNI.CO</h3>
-            <h6>Email me</h6>
+            <h6><a href="mailto:hello@akanni.co" target="_blank">Email me</a></h6>
       
             <br/>
             <br/>
