--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
         <div id="portfolio-projects">
             <ul id="projects">
                 <li class="item-project span12">
-                    <a href="work.html" title="Work1"><img src="assets/img/home1.jpg" alt=""></a>
+                    <a href="message-in-a-bottle.html" title="Message In A Bottle SG"><img src="assets/img/wine1.jpg" alt=""></a>
                 </li>       
                 <li class="item-project span6">
-                    <a href="work.html" title="Work2"><img src="assets/img/home2.jpg" alt=""></a>
+                    <a href="debt-omnitracker.html" title="Debt Omnitracker"><img src="assets/img/debts-payment-rollout-airtable.png.png" alt=""></a>
                 </li>
                 <li class="item-project span6">
-                    <a href="work.html" title="Work3"><img src="assets/img/home4.jpg" alt=""></a>
+                    <a href="subscription-sharing-portal.html" title="Subscription Sharing Portal"><img src="assets/img/subscription-sharing-portal.png" alt=""></a>
                 </li>
                 <li class="item-project span12">
-                    <a href="work.html" title="Work4"><img src="assets/img/home3.jpg" alt=""></a>
+                    <a href="anchemy-website.html" title="Anchemy Website"><img src="assets/img/anchemy-website.png" alt=""></a>
                 </li>
             </ul>
         </div>
