--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a href="message-in-a-bottle.html" title="Message In A Bottle SG"><img src="assets/img/wine1.jpg" alt=""></a>
                 </li>       
                 <li class="item-project span6">
-                    <a href="debt-omnitracker.html" title="Debt Omnitracker"><img src="assets/img/debts-payment-rollout-airtable.png.png" alt=""></a>
+                    <a href="debt-omnitracker.html" title="Debt Omnitracker"><img src="assets/img/debts-payment-rollout-airtable.png" alt=""></a>
                 </li>
                 <li class="item-project span6">
                     <a href="subscription-sharing-portal.html" title="Subscription Sharing Portal"><img src="assets/img/subscription-sharing-portal.png" alt=""></a>
