Refactor subscription-sharing-portal.html structure
Updated the subscription sharing portal HTML structure and content.

--- a/subscription-sharing-portal.html
+++ b/subscription-sharing-portal.html
@@ -80,7 +80,7 @@
                 <br/><br/>
             </div> 
             <div class="span6">
-                <p>The subscription sharing portal is for friend and family that share subscriptions and want to keep processes and policies while sharing streamlined and efficient.</p>
+                <p>The subscription sharing portal is for friends and family that share subscriptions and want to keep processes and policies streamlined and efficient.</p>
             </div> 
         </div>
     </div>
@@ -128,4 +128,5 @@
 <!-- End Footer -->
 
 </body>
+
 </html>
