Replace about image and restructure services section

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="span12">
         <div class="team-img">
-          <img src="assets/img/about.jpg" alt="About">
+          <img src="assets/img/lauren-mancke-unsplash.png" alt="About">
         </div>
       </div>
     </div>
@@ -113,15 +113,15 @@
       </div>
     </div>
   </div>
-  <div class="span4">           
-      <div class="team-name">
+  <div class="row">
+  	<div class="span4">           
+      	<div class="team-name">
         Knowledge base setup<br/>
         Instructional material creation (ex. onboarding)<br/>
         Course creation (Articulate Storyline 360, Adobe Captivate, Thinkific, etc) <br/>
 		Instructional design consultation from businesses to educational content to self-learning
       </div>
     </div>
-  </div>
   <div class="span4">           
       <div class="team-name">
         Promotional graphics for businesses<br/>
@@ -130,7 +130,7 @@
 		Social media management
       </div>
     </div>
-  </div>
+</div>
 </section>
 <!-- End Services -->
 
