Add team name section to about.html

--- a/about.html
+++ b/about.html
@@ -114,6 +114,11 @@
     </div>
   </div>
   <div class="row">
+	<div class="span4">
+      <div class="team-name">
+        <p>     </p>
+      </div>
+    </div>
   	<div class="span4">           
       	<div class="team-name">
         Knowledge base setup<br/>
