--- a/about.html
+++ b/about.html
@@ -70,7 +70,8 @@
     <div class="row">
       <div class="span12">
         <div class="team-img">
-          <img src="assets/img/lauren-mancke-unsplash.png" alt="About">
+          <img src="assets/img/lauren-mancke-unsplash.jpg" alt="Photo by <a href="https://unsplash.com/@laurenmancke?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Lauren Mancke</a> on <a href="https://unsplash.com/photos/turned-off-macbook-pro-beside-white-ceramic-mug-filled-with-coffee-aOC7TSLb1o8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      ">
         </div>
       </div>
     </div>
